--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
       <article class="resume internship" data-page="internship">
 
         <header>
-          <h2 class="h2 article-title">Internship & skills</h2>
+          <h2 class="h2 article-title">Internship </h2>
         </header>
 
         <section class="timeline">
@@ -737,7 +737,7 @@
       <article class="certificate" data-page="certificate">
 
         <header>
-          <h2 class="h2 article-title">Portfolio</h2>
+          <h2 class="h2 article-title">Certificate</h2>
         </header>
 
         <section class="projects">
